updated chess url

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
     </p>
 </div>
 <div class="gameCard">
-  <a href="https://66baphomet.github.io/chess-remastered/"><img src="./game images/chess.png" alt="Chess" title="Chess"></a>
-  <h4> <a href="https://66baphomet.github.io/chess-remastered/">Chess</a></h4>
+  <a href="https://66baphomet.github.io/chess-redone/"><img src="./game images/chess.png" alt="Chess" title="Chess"></a>
+  <h4> <a href="https://66baphomet.github.io/chess-redone/">Chess</a></h4>
   <p>
       Multiplayer Chess to play with your friends.
   </p>
